Closed Bug 27993 Opened 25 years ago Closed 25 years ago

Page layout doesn't look right (colspan=0)

Categories

(Core :: Layout: Tables, defect, P3)

x86
Windows 98
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: bwp6, Assigned: karnaze)

References

()

Details

(Keywords: testcase)

Attachments

(1 file)

The new dell website doesn't look right after the home page. The layout of the tables seem to shift right.
Attached file Testcase
Problem is caused by COLSPAN="0"
Keywords: testcase
Nav4.x does not support the html 4 colspan=0 and treats it like colspan=1. The attachment gives an error condition involving colspan=0. colspan=0 means the cell spans to the end of the table. If cells follow it on the same row then it is up to the ua how to deal with it. Anyway, I will add a NavQuirks hack to turn colspan=0 into colspan=1 and that will fix the problem for pages that rely on this behavior.
Status: NEW → ASSIGNED
Target Milestone: M15
*** Bug 29483 has been marked as a duplicate of this bug. ***
Adding (colspan=0) to summary.
Summary: Page layout doesn't look right → Page layout doesn't look right (colspan=0)
*** Bug 29792 has been marked as a duplicate of this bug. ***
rowspan/colspan=0 now only works according to HTML 4 in strict mode. There are pages relying on the behavior where a value <= 0 becomes 1.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Using 7/13 build, table working correctly in Nav Quirks. Colspan of 0 = 1. Verifying bug fixed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: