bug 27993, 30332 - treat rowspan/colspan=0 like Nav in quirks mode rather than according to html 4.